--- a/app/src/main/res/layout/activity_flashcard_init_settings.xml
+++ b/app/src/main/res/layout/activity_flashcard_init_settings.xml
@@ -117,22 +117,21 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.443" />
+        app:layout_constraintVertical_bias="0.387" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="241dp"
-        android:layout_height="145dp"
+        android:layout_width="232dp"
+        android:layout_height="127dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.711">
+        app:layout_constraintVertical_bias="0.528">
 
         <RadioButton
             android:id="@+id/radioButton"
@@ -209,9 +208,14 @@
         app:layout_constraintHorizontal_bias="0.28"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702" /><![CDATA[
+        app:layout_constraintVertical_bias="0.702" />
 
-    />
+    <Button
+        android:id="@+id/addTagBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Tag"
+        tools:layout_editor_absoluteX="295dp"
+        tools:layout_editor_absoluteY="378dp" />
 
-]]>
 </android.support.constraint.ConstraintLayout>
