--- a/app/src/main/res/layout/activity_make_set.xml
+++ b/app/src/main/res/layout/activity_make_set.xml
@@ -39,54 +39,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/rellayout2"
-            android:layout_below="@+id/rellayout1">
+            android:layout_below="@+id/rellayout1"
+            android:layout_above="@+id/botNavBar">
 
             <include layout = "@layout/layout_center_viewpager"/>
 
-            <Button
-                android:id="@+id/testmid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/button2"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="167dp"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="200dp"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/viewFlashcardBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="48dp"
-                android:layout_toEndOf="@+id/testmid"
-                android:layout_toRightOf="@+id/testmid"
-                android:text="View a Flashcard" />
-
-            <Button
-                android:id="@+id/makeFlashcardBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/viewFlashcardBtn"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="35dp"
-                android:text="Create a new study set" />
 
         </RelativeLayout>
 
         <!-- bottom navigation -->
         <include layout = "@layout/layout_bottom_navigation_view"/>
+
 
     </RelativeLayout>
 
