--- a/app/src/main/res/layout/layout_card_view.xml
+++ b/app/src/main/res/layout/layout_card_view.xml
@@ -3,14 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp"
-    android:id="@+id/parent_layout">
+    android:padding="20dp">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/parent_layout">
 
         <android.support.v7.widget.CardView
             android:layout_width="300dp"
+            android:layout_marginLeft="30dp"
             android:layout_height="match_parent"
             app:cardElevation="5dp"
-            android:layout_centerHorizontal="true">
+            android:layout_centerInParent="true">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -35,5 +40,7 @@
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
