--- a/app/src/main/res/layout/fragment_make_aset.xml
+++ b/app/src/main/res/layout/fragment_make_aset.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
                 android:padding="5dp"
                 android:id="@+id/rellayout1">
 
@@ -40,7 +40,33 @@
                             android:id="@+id/set_Tag"
                             android:hint="Tags"
                             android:textSize="18sp"/>
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_below="@+id/set_Tag"
+                            android:layout_height="30dp">
+                        <RadioGroup
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:orientation="horizontal"
+                            android:id="@+id/radioGroup">
+                            <RadioButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Public"
+                                android:layout_marginLeft="40dp"
+                                android:id="@+id/publicRadioButton"/>
 
+                            <RadioButton
+                                android:id="@+id/privateRadioButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Private"
+                                android:layout_marginLeft="140dp"
+                                android:layout_toRightOf="@+id/publicRadioButton"
+                                />
+
+                        </RadioGroup>
+                        </RelativeLayout>
                     </RelativeLayout>
 
                 </android.support.v7.widget.CardView>
