--- a/app/src/main/res/layout/activity_speed_round.xml
+++ b/app/src/main/res/layout/activity_speed_round.xml
@@ -19,11 +19,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_cancel"/>
+        <TextView
+            android:id="@+id/timerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Timer"/>
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:padding="30dp"
+        android:padding="15dp"
         android:layout_below="@+id/rellayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -34,6 +40,7 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
+                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <android.support.v7.widget.CardView
@@ -42,6 +49,11 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
+                        <TextView
+                            android:id="@+id/cardNumTextView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="CardNum"/>
 
                         <TextView
                             android:id="@+id/testTextView1"
@@ -71,6 +83,7 @@
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
             <RelativeLayout
+                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <android.support.v7.widget.CardView
@@ -80,6 +93,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
+                        <TextView
+                            android:id="@+id/cardNumTextView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="cardNum"/>
                         <TextView
                             android:id="@+id/testTextView2"
                             android:layout_centerInParent="true"
