--- a/app/src/main/res/layout/dialog_custom_setting.xml
+++ b/app/src/main/res/layout/dialog_custom_setting.xml
@@ -44,7 +44,15 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:text="Continue"
-            android:textSize="20dp"/>
+            android:textSize="16dp"/>
+
+        <EditText
+            android:id="@+id/timerEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:hint="Temp Timer"/>
 
     </RelativeLayout>
 
