--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,113 +8,98 @@
     tools:context="com.example.along002.testingfinal.LoginActivity">
 
 
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/rellayout1"
-            android:background="@color/top_blue">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"
-                android:textSize="36dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_below="@id/rellayout1">
 
             <EditText
-                android:id="@+id/emailTxt"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/TextViewSignUp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="18dp"
-                android:ems="10"
-                android:hint="E-Mail"
+                android:layout_width="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:inputType="textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/passwordTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/emailTxt"
-                android:layout_marginTop="21dp"
-                android:layout_toLeftOf="@+id/testingBtn"
-                android:layout_toStartOf="@+id/testingBtn"
+                android:hint="E-Mail"
                 android:ems="10"
-                android:hint="password"
-                android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+                android:layout_alignStart="@+id/passwordTxt"
+                android:layout_alignLeft="@+id/passwordTxt"
+                android:layout_above="@+id/passwordTxt"
+                android:id="@+id/emailTxt"/>
 
-            <TextView
-                android:id="@+id/TextViewSignUp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="56dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:text="Sign Up"
-                android:textSize="30sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:ems="10"
+            android:layout_above="@+id/loginBtn"
+            android:id="@+id/passwordTxt"
+            app:layout_constraintTop_toBottomOf="@+id/emailTxt"
+            android:layout_marginBottom="42dp"
+            android:layout_centerHorizontal="true"/>
 
-            <Button
-                android:id="@+id/loginBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/logoutBtn"
-                android:layout_alignStart="@+id/logoutBtn"
-                android:layout_centerVertical="true"
-                android:text="Login"
-                app:layout_constraintBottom_toTopOf="@+id/TextViewSignUp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
-                app:layout_constraintVertical_bias="0.174" />
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/testingBtn"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp"
+            android:text="Test"
+            android:layout_alignRight="@+id/loginBtn"
+            android:layout_alignEnd="@+id/loginBtn"
+            android:layout_alignBottom="@+id/logoutBtn"
+            android:layout_alignBaseline="@+id/logoutBtn"/>
 
-            <Button
-                android:id="@+id/logoutBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/passwordTxt"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="84dp"
-                android:text="Log Out"
-                app:layout_constraintBottom_toTopOf="@+id/TextViewSignUp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/loginBtn"
+            android:layout_marginBottom="90dp"
+            android:layout_centerHorizontal="true"
+            android:text="Log In"
+            android:background="#4863A0"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_alignParentBottom="true"/>
 
-            <Button
-                android:id="@+id/testingBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/TextViewSignUp"
-                android:layout_alignBottom="@+id/TextViewSignUp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:text="Test"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp" />
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/signupBtn"
+            android:layout_marginBottom="35dp"
+            android:text="Sign up for free"
+            android:background="#3090C7"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_alignParentBottom="true"/>
+
+        <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/logoutBtn"
+            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
+            android:text="Log Out"
+            android:layout_marginLeft="13dp"
+            app:layout_constraintBottom_toTopOf="@+id/TextViewSignUp"
+            android:layout_marginTop="18dp"
+            android:layout_marginStart="13dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"/>
+
         </RelativeLayout>
-
     </RelativeLayout>
+
 </android.support.design.widget.CoordinatorLayout>
